--- a/motorweb-nextjs/src/app/globals.css
+++ b/motorweb-nextjs/src/app/globals.css
@@ -242,3 +242,16 @@ select option {
   content: '←';
   transform: translateX(-20%);
 }
+
+@utility underlinee {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 2px;
+  background-color: var(--accent);
+}
+
+@utility underlineeHover{
+  width: 80%;
+  transition: all 0.3s ease;
+}
